--- a/ShopOnline.Web/Pages/Products.razor
+++ b/ShopOnline.Web/Pages/Products.razor
@@ -26,7 +26,7 @@ else
                 @foreach (var item in productRowList)
                 {
                     <div class = "col-md-3 mb-2">   
-                        <a href="/ProductDetails/@item.ImageURL">
+                        <a href="/ProductDetails/@item.Id">
                             <div class="card">
                                 <img class="img-thumbnail" src="@item.ImageURL">
                                 <div class="card-body">
